force-app/main/default/objects/OD_Search_Area__c/OD_Search_Area__c.object-meta.xml
<CustomObject>
    <description>Keywords to use for full text searching. This is the top-level parameter whose value is the set of search parameters</description>
    <label>OD Search Area</label>
    <nameField>
        <displayFormat>ODS-{0000}</displayFormat>
        <label>OD Search Area Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OD Search Areas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>