force-app/main/default/objects/OD_Search_Area__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <description>One degree search area query parameter.</description>
    <inlineHelpText>One degree search area query parameter.</inlineHelpText>
    <label>Area</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Urgent!</fullName>
            </value>
            <value>
                <fullName>Family &amp; Household</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Housing</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Employment</fullName>
            </value>
            <value>
                <fullName>Money</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>