force-app/main/default/objects/OD_Search_Area__c/fields/Job_EndDate__c.field-meta.xml
<CustomField>
    <fullName>Job_EndDate__c</fullName>
    <defaultValue></defaultValue>
    <description>End date of the job</description>
    <inlineHelpText>End date of the job</inlineHelpText>
    <label>Job Enddate</label>
    <type>DateTime</type>
</CustomField>