force-app/main/default/objects/OD_Search_Area__c/fields/Job_StartDate__c.field-meta.xml
<CustomField>
    <fullName>Job_StartDate__c</fullName>
    <defaultValue></defaultValue>
    <description>Start date of the job</description>
    <inlineHelpText>Start date of the job</inlineHelpText>
    <label>Job Startdate</label>
    <type>DateTime</type>
</CustomField>