force-app/main/default/objects/OD_Search_Area__c/fields/OD_Zipcode__c.field-meta.xml
<CustomField>
    <fullName>OD_Zipcode__c</fullName>
    <description>This is child of the OD zipcode object.</description>
    <inlineHelpText>This is child of the OD zipcode object.</inlineHelpText>
    <label>OD Zipcode</label>
    <referenceTo>OD_Zipcode__c</referenceTo>
    <relationshipLabel>OD Search Areas</relationshipLabel>
    <relationshipName>OD_Search_Areas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>