force-app/main/default/objects/OD_Search_Area__c/fields/Program_Area__c.field-meta.xml
<CustomField>
    <fullName>Program_Area__c</fullName>
    <description>Map the corresponding Program Area Type to One Degree Area.</description>
    <inlineHelpText>Map the corresponding Program Area Type to One Degree Area.</inlineHelpText>
    <label>Program Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Care</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Goods</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Housing</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Money</fullName>
            </value>
            <value>
                <fullName>Transit</fullName>
            </value>
            <value>
                <fullName>Work</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>